--- a/css.css
+++ b/css.css
@@ -26,22 +26,50 @@ a{
 }
 
 a:hover{
-    background-color: black;
+    background-color: #fca311;
     border-radius: 3px;
     color: beige;
     background-size: 20px;
     transition-duration: 0.5s;
 }
+p{
+    text-align: justify;
+}
 
 
 .conteudo{
-    padding: 0px 20px 0px 20px;
+    padding: 0px 70px 0px 70px;
 }
 .dois{
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 40px;
 }
 .texto{
     padding: 20px;
+}
+
+.tres{
+    text-align: center;
+}
+
+.imagens{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50px;
+}
+
+.quatro{
+    text-align: justify;
+    padding: 30px;
+}
+
+footer{
+    background-color: #fca311;
+    color: rgb(255, 255, 255);
+    padding: 20px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
