--- a/css.css
+++ b/css.css
@@ -59,6 +59,20 @@ p{
     padding: 30px 50px;
 }
 
+.fotos{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    
+}
+
+.video{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px 20px 0px;
+}
+
 .quatro{
     text-align: justify;
     padding: 30px;
