--- a/css.css
+++ b/css.css
@@ -78,6 +78,11 @@ p{
     padding: 30px;
 }
 
+.cinco{
+    text-align: justify;
+    padding: 30px;
+}
+
 footer{
     background-color: #fca311;
     color: rgb(255, 255, 255);
